--- a/arch/arm/configs/opensemc_fuji_hikari_row_defconfig
+++ b/arch/arm/configs/opensemc_fuji_hikari_row_defconfig
@@ -108,9 +108,10 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_VR=y
 CONFIG_CPU_IDLE=y
 CONFIG_DEFAULT_IOSCHED="cfq"
-CONFIG_IOSCHED_BFQ=y
 CONFIG_MSM_KGSL_SIMPLE_GOV=y
 CONFIG_VFP=y
 CONFIG_NEON=y
