--- a/arch/arm/configs/opensemc_fuji_aoba_defconfig
+++ b/arch/arm/configs/opensemc_fuji_aoba_defconfig
@@ -254,6 +254,7 @@ CONFIG_RFKILL=y
 CONFIG_GENLOCK=y
 CONFIG_GENLOCK_MISCDEVICE=y
 CONFIG_SYNC=y
+CONFIG_SW_SYNC=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_UID_STAT=y
