--- a/drivers/video/msm/Kconfig
+++ b/drivers/video/msm/Kconfig
@@ -27,8 +27,19 @@ config FB_MSM_LOGO
 	---help---
 	  Show /initlogo.rle during boot.
 
+config FB_MSM_LOGO_ANIMATE
+	tristate "MSM Frame Animated Buffer Logo"
+	select FB_MSM_LOGO
+	default y
+	---help---
+	  Show animated kernel logo during boot.
+
 config FB_MSM_LCDC_HW
 	bool
+	default n
+
+config FB_MSM_HDPI
+	bool "Increased pmem size needed for HDPI devices"
 	default n
 
 config FB_MSM_TRIPLE_BUFFER
@@ -84,16 +95,6 @@ config FB_MSM_MDP40
 	  Support for MSM MDP HW revision 4.0
 	  Say Y here if this is msm7x30 variant platform.
 
-config FB_MSM_MDSS
-	bool "MDSS HW"
-	---help---
-	The Mobile Display Sub System (MDSS) driver supports devices which
-	contain MDSS hardware block.
-
-	The MDSS driver implements frame buffer interface to provide access to
-	the display hardware and provide a way for users to display graphics
-	on connected display panels.
-
 config FB_MSM_MDP_NONE
 	bool "MDP HW None"
 	---help---
@@ -114,10 +115,6 @@ config FB_MSM_MIPI_DSI
 	default n
 
 config FB_MSM_LCDC
-	bool
-	default n
-
-config FB_MSM_LVDS
 	bool
 	default n
 
@@ -218,18 +215,10 @@ config FB_MSM_MIPI_DSI_NOVATEK
         select FB_MSM_MIPI_DSI
         default n
 
-config FB_MSM_MIPI_DSI_NT35510
-	bool
-	select FB_MSM_MIPI_DSI
-
 config FB_MSM_MIPI_DSI_ORISE
         bool
         select FB_MSM_MIPI_DSI
         default n
-
-config FB_MSM_MIPI_DSI_NT35516
-	bool
-	select FB_MSM_MIPI_DSI
 
 config FB_MSM_MIPI_DSI_TC358764_DSI2LVDS
 	bool
@@ -293,20 +282,6 @@ config FB_MSM_LCDC_AUO_WVGA
 	select FB_MSM_LCDC_PANEL
 	default n
 
-config FB_MSM_LCDC_TRULY_HVGA_IPS3P2335
-        bool
-        select FB_MSM_LCDC_PANEL
-        default n
-
-config FB_MSM_LCDC_TRULY_HVGA_IPS3P2335_PT_PANEL
-        depends on FB_MSM_LCDC_HW
-        bool "LCDC Truly HVGA PT Panel"
-        select FB_MSM_LCDC_TRULY_HVGA_IPS3P2335
-        default n
-        ---help---
-        Support for LCDC Truly HVGA PT panel
-
-
 config FB_MSM_LCDC_SAMSUNG_OLED_PT
 	bool
 	select FB_MSM_LCDC_PANEL
@@ -320,16 +295,6 @@ config FB_MSM_LCDC_NT35582_WVGA
 config FB_MSM_LCDC_WXGA
 	bool
 	select FB_MSM_LCDC_PANEL
-	default n
-
-config FB_MSM_LVDS_CHIMEI_WXGA
-	bool
-	select FB_MSM_LVDS
-	default n
-
-config FB_MSM_LVDS_FRC_FHD
-	bool
-	select FB_MSM_LVDS
 	default n
 
 config FB_MSM_MIPI_TOSHIBA_VIDEO_WVGA_PT
@@ -376,27 +341,6 @@ config FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT
 	bool
 	select FB_MSM_MIPI_DSI_RENESAS
 	default n
-
-config FB_MSM_MIPI_NT35510_VIDEO_WVGA_PT
-	bool
-	select FB_MSM_MIPI_DSI_NT35510
-	default n
-
-config FB_MSM_MIPI_NT35510_CMD_WVGA_PT
-	bool
-	select FB_MSM_MIPI_DSI_NT35510
-	default n
-
-config FB_MSM_MIPI_NT35516_VIDEO_QHD_PT
-        bool
-        select FB_MSM_MIPI_DSI_NT35516
-        default n
-
-config FB_MSM_MIPI_NT35516_CMD_QHD_PT
-        bool
-        select FB_MSM_MIPI_DSI_NT35516
-        default n
-
 
 config FB_MSM_MIPI_CHIMEI_WXGA
 	bool "LVDS Chimei WXGA Panel using Toshiba MIPI DSI-to-LVDS bridge."
@@ -534,21 +478,6 @@ config FB_MSM_LCDC_SAMSUNG_OLED_PT_PANEL
 	---help---
 	  Support for LCDC Samsung OLED PT (480x800) panel
 
-config FB_MSM_LVDS_CHIMEI_WXGA_PANEL
-        bool "LVDS Chimei WXGA Panel"
-        select FB_MSM_LVDS_CHIMEI_WXGA
-        ---help---
-          Support for LVDS Chimei WXGA(1366x768) panel
-
-config FB_MSM_LVDS_FRC_FHD_PANEL
-	bool "LVDS FRC FHD Panel"
-	select FB_MSM_LVDS_FRC_FHD
-	---help---
-	  Support for LVDS Frc FHD(1920x1080) panel
-	  FRC(Frame Rate Converter) uses LVDS as input
-	  interface. It is treated as a HDMI panel with
-	  1920x1080 resolution.
-
 config FB_MSM_TRY_MDDI_CATCH_LCDC_PRISM
 	depends on FB_MSM_LCDC_HW
 	bool "MDDI Panel Auto Detect + LCDC Prism WVGA"
@@ -574,12 +503,8 @@ config FB_MSM_MIPI_PANEL_DETECT
 	select FB_MSM_MIPI_TRULY_VIDEO_WVGA_PT
 	select FB_MSM_MIPI_NOVATEK_VIDEO_QHD_PT
 	select FB_MSM_MIPI_NOVATEK_CMD_QHD_PT
-	select FB_MSM_MIPI_NT35510_VIDEO_WVGA_PT
-	select FB_MSM_MIPI_NT35510_CMD_WVGA_PT
 	select FB_MSM_MIPI_ORISE_VIDEO_720P_PT
 	select FB_MSM_MIPI_ORISE_CMD_720P_PT
-	select FB_MSM_MIPI_NT35516_VIDEO_QHD_PT
-	select FB_MSM_MIPI_NT35516_CMD_QHD_PT
 	select FB_MSM_MIPI_SIMULATOR_VIDEO
 	select FB_MSM_MIPI_CHIMEI_WXGA
 	select FB_MSM_MIPI_CHIMEI_WUXGA
@@ -616,35 +541,9 @@ config FB_MSM_LCDC_MIPI_PANEL_AUTO_DETECT
 	select FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT
 	select FB_MSM_MIPI_NOVATEK_VIDEO_QHD_PT
 	select FB_MSM_MIPI_NOVATEK_CMD_QHD_PT
-	select FB_MSM_MIPI_NT35510_VIDEO_WVGA_PT
-	select FB_MSM_MIPI_NT35510_CMD_WVGA_PT
-	select FB_MSM_MIPI_NT35516_VIDEO_QHD_PT
-	select FM_MSM_MIPI_NT35516_CMD_QHD_PT
 	select FB_MSM_MIPI_SIMULATOR_VIDEO
 	---help---
 	  Support for LCDC + MIPI panel auto detect
-
-config FB_MSM_LVDS_MIPI_PANEL_DETECT
-	bool "LVDS + MIPI Panel Auto Detect"
-	select FB_MSM_LVDS_CHIMEI_WXGA
-	select FB_MSM_LVDS_FRC_FHD
-	select FB_MSM_MIPI_TOSHIBA_VIDEO_WVGA_PT
-	select FB_MSM_MIPI_TOSHIBA_VIDEO_WSVGA_PT
-	select FB_MSM_MIPI_TOSHIBA_VIDEO_WUXGA
-	select FB_MSM_MIPI_RENESAS_VIDEO_FWVGA_PT
-	select FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT
-	select FB_MSM_MIPI_TRULY_VIDEO_WVGA_PT
-	select FB_MSM_MIPI_NOVATEK_VIDEO_QHD_PT
-	select FB_MSM_MIPI_NOVATEK_CMD_QHD_PT
-	select FB_MSM_MIPI_NT35510_VIDEO_WVGA_PT
-	select FB_MSM_MIPI_NT35510_CMD_WVGA_PT
-	select FB_MSM_MIPI_ORISE_VIDEO_720P_PT
-	select FB_MSM_MIPI_ORISE_CMD_720P_PT
-	select FB_MSM_MIPI_SIMULATOR_VIDEO
-	select FB_MSM_MIPI_CHIMEI_WXGA
-	select FB_MSM_MIPI_CHIMEI_WUXGA
-	---help---
-	  Support for LVDS + MIPI panel auto detect
 
 config FB_MSM_MDDI_PRISM_WVGA
 	bool "MDDI Prism WVGA Panel"
@@ -723,22 +622,6 @@ config FB_MSM_MIPI_CHIMEI_WUXGA_PANEL
 config FB_MSM_MIPI_TRULY_VIDEO_WVGA_PT_PANEL
 	bool "MIPI Truly Video WVGA PT Panel"
 	select FB_MSM_MIPI_TRULY_VIDEO_WVGA_PT
-
-config FB_MSM_MIPI_NT35510_VIDEO_WVGA_PT_PANEL
-	bool "MIPI NT35510 Video WVGA PT Panel"
-	select FB_MSM_MIPI_NT35510_VIDEO_WVGA_PT
-
-config FB_MSM_MIPI_NT35510_CMD_WVGA_PT_PANEL
-	bool "MIPI NT35510 Command WVGA PT Panel"
-	select FB_MSM_MIPI_NT35510_CMD_WVGA_PT
-
-config FB_MSM_MIPI_NT35516_VIDEO_QHD_PT_PANEL
-        bool "MIPI NT35516 Video qHD PT Panel"
-        select FB_MSM_MIPI_NT35516_VIDEO_QHD_PT
-
-config FB_MSM_MIPI_NT35516_CMD_QHD_PT_PANEL
-        bool "MIPI NT35516 Command qHD PT Panel"
-        select FB_MSM_MIPI_NT35516_CMD_QHD_PT
 
 config FB_MSM_MIPI_SIMULATOR_VIDEO_PANEL
 	bool "MIPI Simulator Video Panel"
@@ -935,21 +818,24 @@ config FB_MSM_MHL_SII8334
 
 config FB_MSM_HDMI_MHL_9244
 	depends on FB_MSM_HDMI_MSM_PANEL
-	bool 'SI_MHL 9244 support'
+	bool 'HDMI to MHL support'
 	default n
 	---help---
 	  Support the HDMI to MHL conversion.
 	  MHL (Mobile High-Definition Link) technology
 	  uses USB connector to output HDMI content
 
-config FB_MSM_HDMI_MHL_8334
-	depends on FB_MSM_HDMI_MSM_PANEL
-	bool 'SI_MHL 8334 support '
-	default n
-	---help---
-	  Support the HDMI to MHL conversion.
-	  MHL (Mobile High-Definition Link) technology
-	  uses USB connector to output HDMI content
+config FB_MSM_HDMI_SII9024A_PANEL
+        depends on FB_MSM_MDP40
+        bool "LCDC HDMI SiI9024A 720p Panel"
+        select FB_MSM_DTV
+        select FB_MSM_EXT_INTERFACE_COMMON
+        select FB_MSM_HDMI_COMMON
+        select UIO
+        select UIO_PDRV_GENIRQ
+        default n
+        ---help---
+          Support for LCDC 720p HDMI panel attached to SiI9024A
 
 choice
 	depends on  (FB_MSM_MDP22 || FB_MSM_MDP31 || FB_MSM_MDP40)
@@ -1052,8 +938,4 @@ config FB_MSM_EBI2_PANEL_DETECT
 	default n
 	---help---
 	  Support for EBI2 panel auto detect
-
-if FB_MSM_MDSS
-	source "drivers/video/msm/mdss/Kconfig"
-endif
 endif
