--- a/arch/arm/configs/opensemc_fuji_hikari_row_defconfig
+++ b/arch/arm/configs/opensemc_fuji_hikari_row_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-RAYMANFX-CAF"
+CONFIG_LOCALVERSION="-RAYMANFX-CAF / Deedwar"
 CONFIG_SYSVIPC=y
 CONFIG_TASKSTATS=y
 CONFIG_AUDIT=y
@@ -110,6 +110,7 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_IDLE=y
 CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_IOSCHED_BFQ=y
 CONFIG_MSM_KGSL_SIMPLE_GOV=y
 CONFIG_VFP=y
 CONFIG_NEON=y
