--- a/arch/arm/configs/opensemc_fuji_hikari_row_defconfig
+++ b/arch/arm/configs/opensemc_fuji_hikari_row_defconfig
@@ -112,6 +112,7 @@ CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_CPU_IDLE=y
+CONFIG_LINK_CPU_GOVERNORS=y
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_MSM_KGSL_SIMPLE_GOV=y
 CONFIG_VFP=y
