Fix Sweep2Wake compile errors

--- a/arch/arm/configs/opensemc_fuji_nozomi_defconfig
+++ b/arch/arm/configs/opensemc_fuji_nozomi_defconfig
@@ -504,6 +504,8 @@ CONFIG_DYNAMIC_DEBUG=y
 CONFIG_DEBUG_USER=y
 CONFIG_KEYS=y
 CONFIG_SECURITY=y
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
 # CONFIG_SECURITYFS is not set
 CONFIG_SECURITY_NETWORK=y
 # CONFIG_SECURITY_NETWORK_XFRM is not set
